# bitloom-avr

./: LICENSE  README.md  avr-gcc-toolchain.cmake
avr_hal/: CMakeLists.txt  avr_i2c.c  avr_pin_digital_io.c
avr_hal/src/: avr_timer.c
avr_hal/src/i2c/: CMakeLists.txt  i2c.c
avr_hal/src/pin_digital_io/: CMakeLists.txt  pin_digital_io.c
avr_hal/src/timer/: CMakeLists.txt  timer.c
avr_hal/src/uart/: CMakeLists.txt  uart.c
avr_hal/src/uart_hal/: CMakeLists.txt  uart_hal.c
